--- a/configs/cclm-base-ft/NLVR.yaml
+++ b/configs/cclm-base-ft/NLVR.yaml
@@ -25,6 +25,7 @@ patch_size: 32
 
 
 ## Text Encoder (& Cross Encoder)
+# text_config: 'configs/config_xlm.json'
 text_encoder: 'data/xlm-roberta-large'
 text_num_hidden_layers: 12
 
